# MLFlow-MLOps

./: README.md  detection_train_pipeline.json  pyproject.toml  task.py
config/: config.yaml
docker/: Dockerfile  Dockerfile.test
pipeline/: pipeline.py  setup_pipeline.py  setup_training.py
src/slo_lr_detection/: __init__.py  config.py  model.py  slo_lr_detection.py  test.py
src/slo_lr_detection/train/: config.py  dataset.py  engine.py  logger.py  model.py  train.py
tests/: test_version.py
